--- a/rv60app/templates/rv60app/urls.html
+++ b/rv60app/templates/rv60app/urls.html
@@ -7,7 +7,7 @@
 <h1>URLs </h1>
 <form action="">
     <input type="text" name="busca_url">
-    <button type="submit">
+    <button type="submit" class="btn btn-success">
         Buscar URL
     </button>
 </form>
