--- a/rv60app/templates/rv60app/diccionario.html
+++ b/rv60app/templates/rv60app/diccionario.html
@@ -7,7 +7,7 @@
 <h1>Diccionario</h1>
 <form action="">
     <input type="text" name="busca_palabra">
-    <button type="submit">
+    <button type="submit" class="btn btn-success">
         Buscar Palabra
     </button>
 </form>
