--- a/rv60app/templates/rv60app/doctrina.html
+++ b/rv60app/templates/rv60app/doctrina.html
@@ -7,7 +7,7 @@
 <h1>Doctrinas</h1>
 <form action="">
     <input type="text" name="busca_doctrina">
-    <button type="submit">
+    <button type="submit" class="btn btn-success">
         Buscar Doctrina
     </button>
 </form>
