--- a/rv60app/templates/rv60app/tema.html
+++ b/rv60app/templates/rv60app/tema.html
@@ -7,7 +7,7 @@ counter0{% extends 'rv60app/base.html'%}
 <h1>Temas Biblicos</h1>
 <form action="">
     <input type="text" name="busca_tema">
-    <button type="submit">
+    <button type="submit" class="btn btn-success">
         Buscar Tema
     </button>
 </form>
