--- a/rv60app/templates/rv60app/video.html
+++ b/rv60app/templates/rv60app/video.html
@@ -7,7 +7,7 @@
 <h1>Videos (Predicaciones)</h1>
 <form action="">
     <input type="text" name="busca_video">
-    <button type="submit" class="btn btn-danger">
+    <button type="submit" class="btn btn-success">
         Buscar Video
     </button>
 </form>
