--- a/rv60app/templates/rv60app/navbar.html
+++ b/rv60app/templates/rv60app/navbar.html
@@ -47,14 +47,17 @@
           <a class="nav-link" href="{% url 'diccionario' %}"><strong>Diccionario</strong></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'timeline' %}"><strong>Timeline</strong></a>
+        </li> 
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'video' %}"><strong>Videos</strong></a>
         </li>    
         <li class="nav-item">
           <a class="nav-link" href="{% url 'urls' %}"><strong>Urls</strong></a>
         </li> 
-        {% comment %} <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="./admin"><strong>Admin</strong> <i class="fa fa-home" aria-hidden="true"></i> </a>
-        </li> {% endcomment %}
+        </li> 
       </ul>
     </div>
   </div>
