--- a/rv60app/templates/rv60app/navbar.html
+++ b/rv60app/templates/rv60app/navbar.html
@@ -56,7 +56,7 @@
           <a class="nav-link" href="{% url 'urls' %}"><strong>Urls</strong></a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="./admin"><strong>Admin</strong> <i class="fa fa-home" aria-hidden="true"></i> </a>
+          <a class="nav-link" href="/admin/"><strong>Admin</strong> <i class="fa fa-home" aria-hidden="true"></i> </a>
         </li> 
       </ul>
     </div>
