--- a/rv60app/templates/rv60app/hoy.html
+++ b/rv60app/templates/rv60app/hoy.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>Luz y Vida</title>
+        <script type="text/javascript">
+            window.location.href = "https://aa2.us/archivos/{{today_month}}{{'_'}}{{today_day}}.mp3";
+        </script>
     </head>
     <body>
         <center>
