--- a/rv60app/templates/rv60app/doctrina.html
+++ b/rv60app/templates/rv60app/doctrina.html
@@ -17,7 +17,7 @@
     <th>Doctrina</th>
     <th>Descripcion</th>
     </tr>
-{% for x in doctrinas_queryset %}
+{% for x in page_obj %}
     <tr>
     <td>
     
@@ -28,6 +28,25 @@
     </td>
     </tr>
 {% endfor%}
+<tr><td colspan="2">
+    <div>
+        <span class="step-links">
+          {% if page_obj.has_previous %}
+            <a href="?page=1{% if busca_video %}&busca_video={{ busca_video }}{% endif %}">&nbsp;&nbsp;Primera&nbsp;&nbsp;</a>
+            <a href="?page={{ page_obj.previous_page_number }}{% if busca_video %}&busca_video={{ busca_video }}{% endif %}">&nbsp;&nbsp;Previa&nbsp;&nbsp;</a>
+          {% endif %}
+      
+          <span class="current">
+            Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
+          </span>
+      
+          {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}{% if busca_video %}&busca_video={{ busca_video }}{% endif %}">&nbsp;&nbsp;Próxima&nbsp;&nbsp;</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}{% if busca_video %}&busca_video={{ busca_video }}{% endif %}">&nbsp;&nbsp;Ultima&nbsp;&nbsp;</a>
+          {% endif %}
+        </span>
+      </div>  
+</td></tr>    
 </table>
 {% endblock content %}
 
