--- a/rv60app/templates/rv60app/timeline.html
+++ b/rv60app/templates/rv60app/timeline.html
@@ -41,7 +41,7 @@
     </td>   
     </tr>
     {% endfor%}
-    <tr><td>
+    <tr><td colspan="5">
         <div>
             <span class="step-links">
               {% if page_obj.has_previous %}
