--- a/rv60app/templates/rv60app/doctrina.html
+++ b/rv60app/templates/rv60app/doctrina.html
@@ -32,8 +32,8 @@
     <div>
         <span class="step-links">
           {% if page_obj.has_previous %}
-            <a href="?page=1{% if busca_video %}&busca_video={{ busca_video }}{% endif %}">&nbsp;&nbsp;Primera&nbsp;&nbsp;</a>
-            <a href="?page={{ page_obj.previous_page_number }}{% if busca_video %}&busca_video={{ busca_video }}{% endif %}">&nbsp;&nbsp;Previa&nbsp;&nbsp;</a>
+            <a href="?page=1{% if busca_doctrina %}&busca_doctrina={{ busca_doctrina }}{% endif %}">&nbsp;&nbsp;Primera&nbsp;&nbsp;</a>
+            <a href="?page={{ page_obj.previous_page_number }}{% if busca_doctrina %}&busca_doctrina={{ busca_doctrina }}{% endif %}">&nbsp;&nbsp;Previa&nbsp;&nbsp;</a>
           {% endif %}
       
           <span class="current">
@@ -41,8 +41,8 @@
           </span>
       
           {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}{% if busca_video %}&busca_video={{ busca_video }}{% endif %}">&nbsp;&nbsp;Próxima&nbsp;&nbsp;</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}{% if busca_video %}&busca_video={{ busca_video }}{% endif %}">&nbsp;&nbsp;Ultima&nbsp;&nbsp;</a>
+            <a href="?page={{ page_obj.next_page_number }}{% if busca_doctrina %}&busca_doctrina={{ busca_doctrina }}{% endif %}">&nbsp;&nbsp;Próxima&nbsp;&nbsp;</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}{% if busca_doctrina %}&busca_doctrina={{ busca_doctrina }}{% endif %}">&nbsp;&nbsp;Ultima&nbsp;&nbsp;</a>
           {% endif %}
         </span>
       </div>  
