--- a/rv60app/templates/rv60app/timeline.html
+++ b/rv60app/templates/rv60app/timeline.html
@@ -6,7 +6,7 @@
 <h1>Timeline</h1>
 <table class="table table-striped">
  <tr> 
-  <td>
+  <td colspan="2">
 <form action="">
     <input type="text" name="busca_timeline">
     <button type="submit" class="btn btn-success">
@@ -14,7 +14,7 @@
     </button>
 </form>
 </td>
-<td>
+<td colspan="3" align="right">
   <div>
     <span class="step-links">
       {% if page_obj.has_previous %}
