--- a/rv60app/templates/rv60app/timeline.html
+++ b/rv60app/templates/rv60app/timeline.html
@@ -66,7 +66,8 @@
     </td>   
     </tr>
     {% endfor%}
-    <tr><td colspan="5">
+    <tr>
+      <td colspan="5" align="right">
         <div>
             <span class="step-links">
               {% if page_obj.has_previous %}
