--- a/rv60app/templates/rv60app/diccionario.html
+++ b/rv60app/templates/rv60app/diccionario.html
@@ -5,33 +5,17 @@
 {% block content %}
 
 <h1>Diccionario</h1>
-<form action="">
-    <input type="text" name="busca_palabra">
-    <button type="submit" class="btn btn-success">
-        Buscar Palabra
-    </button>
-</form>
-<br>
-<div>
-  <div class="d-flex justify-content-center align-items-center">
-    <div class="card" style=" ;">
-      <div class="card-body"> 
-        <div class="px-3" style="font-weight:500; font-size:1.2rem">     
-          {% for diccionario in page_obj %}
-          {% if forloop.counter0|divisibleby:2 %}
-            <div class=" py-1 px-1 rounded" style="background:DimGray; color:white;">
-          {% else %} 
-            <div class=" py-1 px-1 rounded" style="background:White; color:black;">
-          {% endif %} 
-          <p class="card-text">{{ diccionario.palabra }} {{ "=" }} {{ diccionario.definicion }}</p>
-            </div>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
-  </div>
-  <div>
-    <span class="step-links">
+<table class="table table-striped">
+  <tr>
+    <td width="50%">
+      <form action="">
+          <input type="text" name="busca_palabra">
+          <button type="submit" class="btn btn-success">
+            Buscar Palabra
+          </button>
+      </form>
+    </td>
+    <td colspan="2" align="right">
       {% if page_obj.has_previous %}
         <a href="?page=1{% if busca_palabra %}&busca_palabra={{ busca_palabra }}{% endif %}">&nbsp;&nbsp;Primera&nbsp;&nbsp;</a>
         <a href="?page={{ page_obj.previous_page_number }}{% if busca_palabra %}&busca_palabra={{ busca_palabra }}{% endif %}">&nbsp;&nbsp;Previa&nbsp;&nbsp;</a>
@@ -45,7 +29,36 @@
         <a href="?page={{ page_obj.next_page_number }}{% if busca_palabra %}&busca_palabra={{ busca_palabra }}{% endif %}">&nbsp;&nbsp;Próxima&nbsp;&nbsp;</a>
         <a href="?page={{ page_obj.paginator.num_pages }}{% if busca_palabra %}&busca_palabra={{ busca_palabra }}{% endif %}">&nbsp;&nbsp;Ultima&nbsp;&nbsp;</a>
       {% endif %}
-    </span>
-  </div>
+    </td>
+  </tr>
+</table>
+<table class="table table-striped">
+    
+          {% for diccionario in page_obj %}
+          <tr> 
+            <td>{{ diccionario.palabra }} </td>
+            <td>{{ diccionario.definicion }}</td>
+          </tr>
+          {% endfor %}
+</table> 
+<table class="table table-striped">
+  <tr>
+    <td colspan="2" align="right">
+      {% if page_obj.has_previous %}
+        <a href="?page=1{% if busca_palabra %}&busca_palabra={{ busca_palabra }}{% endif %}">&nbsp;&nbsp;Primera&nbsp;&nbsp;</a>
+        <a href="?page={{ page_obj.previous_page_number }}{% if busca_palabra %}&busca_palabra={{ busca_palabra }}{% endif %}">&nbsp;&nbsp;Previa&nbsp;&nbsp;</a>
+      {% endif %}
+  
+      <span class="current">
+        Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
+      </span>
+  
+      {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}{% if busca_palabra %}&busca_palabra={{ busca_palabra }}{% endif %}">&nbsp;&nbsp;Próxima&nbsp;&nbsp;</a>
+        <a href="?page={{ page_obj.paginator.num_pages }}{% if busca_palabra %}&busca_palabra={{ busca_palabra }}{% endif %}">&nbsp;&nbsp;Ultima&nbsp;&nbsp;</a>
+      {% endif %}
+    </td>
+  </tr>
+</table>
 {% endblock content %}
 
