--- a/rv60app/templates/rv60app/tema.html
+++ b/rv60app/templates/rv60app/tema.html
@@ -5,24 +5,17 @@
 {% block content %}
 
 <h1>Temas Biblicos</h1>
-<form action="">
-    <input type="text" name="busca_tema">
-    <button type="submit" class="btn btn-success">
-        Buscar Tema
-    </button>
-</form>
-<br>
-<div>
-    <ul>
-      {% for tema in page_obj %}
-        <a href="{% url "porcion"  tema.verso_start tema.verso_end tema.titulo%}" target="_blank">{{tema.titulo}}</a><br>
-        {% comment %} <li>{{ tema.titulo }}</li> {% endcomment %}
-      {% endfor %}
-    </ul>
-  </div>
-  
-  <div>
-    <span class="step-links">
+<table class="table table-striped">
+  <tr>
+    <td>
+      <form action="">
+        <input type="text" name="busca_tema">
+        <button type="submit" class="btn btn-success">
+          Buscar Tema
+        </button>
+      </form>
+    </td>
+    <td align="right">
       {% if page_obj.has_previous %}
         <a href="?page=1{% if busca_tema %}&busca_tema={{ busca_tema }}{% endif %}">&nbsp;&nbsp;Primera&nbsp;&nbsp;</a>
         <a href="?page={{ page_obj.previous_page_number }}{% if busca_tema %}&busca_tema={{ busca_tema }}{% endif %}">&nbsp;&nbsp;Previa&nbsp;&nbsp;</a>
@@ -36,8 +29,35 @@
         <a href="?page={{ page_obj.next_page_number }}{% if busca_tema %}&busca_tema={{ busca_tema }}{% endif %}">&nbsp;&nbsp;Próxima&nbsp;&nbsp;</a>
         <a href="?page={{ page_obj.paginator.num_pages }}{% if busca_tema %}&busca_tema={{ busca_tema }}{% endif %}">&nbsp;&nbsp;Ultima&nbsp;&nbsp;</a>
       {% endif %}
-    </span>
-  </div>
+    </td>
+  </tr>
+      {% for tema in page_obj %}
+        <tr>
+          <td colspan="2">
+            <a href="{% url "porcion"  tema.verso_start tema.verso_end tema.titulo%}" target="_blank">{{tema.titulo}}</a><br>
+          </td>
+        </tr>
+      {% endfor %}
+ 
+  
+  <tr>
+    <td colspan="2" align="right">
+      {% if page_obj.has_previous %}
+        <a href="?page=1{% if busca_tema %}&busca_tema={{ busca_tema }}{% endif %}">&nbsp;&nbsp;Primera&nbsp;&nbsp;</a>
+        <a href="?page={{ page_obj.previous_page_number }}{% if busca_tema %}&busca_tema={{ busca_tema }}{% endif %}">&nbsp;&nbsp;Previa&nbsp;&nbsp;</a>
+      {% endif %}
+  
+      <span class="current">
+        Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
+      </span>
+  
+      {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}{% if busca_tema %}&busca_tema={{ busca_tema }}{% endif %}">&nbsp;&nbsp;Próxima&nbsp;&nbsp;</a>
+        <a href="?page={{ page_obj.paginator.num_pages }}{% if busca_tema %}&busca_tema={{ busca_tema }}{% endif %}">&nbsp;&nbsp;Ultima&nbsp;&nbsp;</a>
+      {% endif %}
+    </td>
+  </tr>
+</table>
   
 {% endblock content %}
 
