--- a/rv60app/templates/rv60app/urls.html
+++ b/rv60app/templates/rv60app/urls.html
@@ -5,25 +5,43 @@
 {% block content %}
 
 <h1>URLs </h1>
+<table class="table table-striped">
+  <tr>
+    <td>
 <form action="">
     <input type="text" name="busca_url">
     <button type="submit" class="btn btn-success">
         Buscar URL
     </button>
 </form>
-<br>
-<div>
-    <ul>
+</td>
+<td align="right">
+  {% if page_obj.has_previous %}
+  <a href="?page=1{% if busca_urls %}&busca_urls={{ busca_urls }}{% endif %}">&nbsp;&nbsp;Primera&nbsp;&nbsp;</a>
+  <a href="?page={{ page_obj.previous_page_number }}{% if busca_urls %}&busca_urls={{ busca_urls }}{% endif %}">&nbsp;&nbsp;Previa&nbsp;&nbsp;</a>
+{% endif %}
+
+<span class="current">
+  Página {{ page_obj.number }} odef {{ page_obj.paginator.num_pages }}.
+</span>
+
+{% if page_obj.has_next %}
+  <a href="?page={{ page_obj.next_page_number }}{% if busca_urls %}&busca_urls={{ busca_urls }}{% endif %}">&nbsp;&nbsp;Próxima&nbsp;&nbsp;</a>
+  <a href="?page={{ page_obj.paginator.num_pages }}{% if busca_urls %}&busca_urls={{ busca_urls }}{% endif %}">&nbsp;&nbsp;Ultima&nbsp;&nbsp;</a>
+{% endif %}
+</td>
+</tr>
+</table>
+<table class="table table-striped">
       {% for url in page_obj %}
-        <li>
-        <a href="{{url.link}}" target="_blank">{{url.titulo}} </a>
-        </li>
+        <tr>
+        <td><a href="{{url.link}}" target="_blank">{{url.titulo}} </a></td>
+        </tr>
       {% endfor %}
-    </ul>
-  </div>
-  
-  <div>
-    <span class="step-links">
+</table>
+<table class="table table-striped">
+  <tr>
+    <td align="right">
       {% if page_obj.has_previous %}
         <a href="?page=1{% if busca_urls %}&busca_urls={{ busca_urls }}{% endif %}">&nbsp;&nbsp;Primera&nbsp;&nbsp;</a>
         <a href="?page={{ page_obj.previous_page_number }}{% if busca_urls %}&busca_urls={{ busca_urls }}{% endif %}">&nbsp;&nbsp;Previa&nbsp;&nbsp;</a>
@@ -37,8 +55,8 @@
         <a href="?page={{ page_obj.next_page_number }}{% if busca_urls %}&busca_urls={{ busca_urls }}{% endif %}">&nbsp;&nbsp;Próxima&nbsp;&nbsp;</a>
         <a href="?page={{ page_obj.paginator.num_pages }}{% if busca_urls %}&busca_urls={{ busca_urls }}{% endif %}">&nbsp;&nbsp;Ultima&nbsp;&nbsp;</a>
       {% endif %}
-    </span>
-  </div>
-  
+    </td>
+  </tr>
+</table>
 {% endblock content %}
 
