--- a/rv60app/templates/rv60app/index.html
+++ b/rv60app/templates/rv60app/index.html
@@ -13,7 +13,8 @@
     <h1>Expiación&nbsp;Propiciación</h1>
     <h1>Reconciliación&nbsp;Redención</h1>
     <h1>Victoria !!!</h1>
-    <img src="{% static 'images/biblia1.jpg' %}" alt="" width="380">
+    <a href="https://luzyvida.com/menu/"><img src="{% static 'images/biblia1.jpg' %}" alt="" width="380"></a>
+    
     </center>    
 </div>
 
