--- a/rv60app/templates/rv60app/tematico.html
+++ b/rv60app/templates/rv60app/tematico.html
@@ -16,7 +16,7 @@
                 {% endif %}
                 <div class="px-3" style="font-weight:500; font-size:1.2rem">
                     {% if forloop.counter0|divisibleby:2 %}
-                    <div class=" py-1 px-1 rounded" style="background:DimGray; color:white;">
+                    <div class=" py-1 px-1 rounded" style="background:black; color:white;">
                     {% else %} 
                     <div class=" py-1 px-1 rounded" style="background:White; color:black;">
                     {% endif %} 
