--- a/search/templates/search/search.html
+++ b/search/templates/search/search.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h3 class="text-center">Busqueda por teclado</h3>
+<h3 class="text-center">Busqueda por palabra</h3>
 
  
 {% comment %} <form action="" method="get" hx-get="{% url "results" %}" hx-trigger="keyup" hx-target="#results"> {% endcomment %}
