--- a/rv60app/templates/rv60app/navbar.html
+++ b/rv60app/templates/rv60app/navbar.html
@@ -37,9 +37,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'doctrina' %}"><strong>Doctrinas</strong></a>
         </li>
-        <li class="nav-item">
+        {% comment %} <li class="nav-item">
           <a class="nav-link" href="{% url 'search' %}"><strong>Search</strong></a>
-        </li>
+        </li> {% endcomment %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'menu' %}"><strong>Reina Valera</strong></a>
         </li>
