--- a/rv60app/templates/rv60app/contact.html
+++ b/rv60app/templates/rv60app/contact.html
@@ -29,7 +29,7 @@
                 {{ form.message.label_tag }}
                 {{ form.message }}
             </div>
-            <button type="submit" class="btn btn-primary">Send Message</button>
+            <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
         </form>
     </div>
     {% endblock content %}
