--- a/rv60app/templates/rv60app/navbar.html
+++ b/rv60app/templates/rv60app/navbar.html
@@ -59,7 +59,7 @@
           <a class="nav-link" href="{% url 'contact_view' %}"><strong>Cont&aacute;ctame</strong></a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" href="https://aa2.us/estudios"><strong>Biblioteca</strong></a>
+          <a class="nav-link" href="#"><strong>Biblioteca</strong></a>
         </li> 
         <li class="nav-item">
           <a class="nav-link" href="/admin/"><strong>Admin</strong> <i class="fa fa-home" aria-hidden="true"></i> </a>
